car edit, delete method and some validation added

--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -54,6 +54,11 @@ button:hover{
     background-color: #3f3e3e;
 }
 
+a{
+	text-decoration: none;
+	color: white;
+}
+
 hr {
   width: 30px;
   height: 2px;
