--- a/src/main/resources/templates/customerList.html
+++ b/src/main/resources/templates/customerList.html
@@ -28,6 +28,10 @@
 		#icon-trash:hover {
 			color: rgb(255, 62, 62);
 		}
+		
+		#icon-car {
+			font-size: 20px;
+		}
 
 		#icon-edit {
 			color: blue;
@@ -73,7 +77,7 @@
 
 
 	<div class="container mt-5">		
-		<table class="table table-hover">
+		<table class="table table-hover text-center">
 			<thead>
 				<tr>
 					<th scope="col">Id</th>
@@ -101,18 +105,19 @@
 					<td th:text="${c.lastname}"></td>
 					<td th:text="${c.province}"></td>
 					<td th:text="${c.district}"></td>					
-					<td><select name="format" onchange="location = this.value;">						
-							<option>Select</option>		
-							<option th:value="@{/trafficInsuranceForm(customer_id = ${c.customer_id})}">Traffic Insurance</option>
-							<option value="">Comprehensive Insurance</option>
-							<option value="">Health Insurance</option>
-							<option value="">Earthquake Insurance</option>
-						</select>
-					</td>
-					<td><button><a th:href="@{/carList/{customer_id}(customer_id=${c.customer_id})}"><i class="fa-solid fa-car"></i></a></button></td>	
-					<td><button><a th:href="@{/editCustomer/{customer_id}(customer_id=${c.customer_id})}"><i id="icon-edit"
+<!--					<td><select name="format" onchange="location = this.value;">						-->
+<!--							<option>Select</option>		-->
+<!--							<option th:value="@{/trafficInsuranceForm(customer_id = ${c.customer_id})}">Traffic Insurance</option>-->
+<!--							<option value="">Comprehensive Insurance</option>-->
+<!--							<option value="">Health Insurance</option>-->
+<!--							<option value="">Earthquake Insurance</option>-->
+<!--						</select>-->
+<!--					</td>-->						
+					<td><a th:href="@{/selectType(customer_id=${c.customer_id})}"><span class="badge text-bg-primary fs-6">Select Type</span></a></td>
+					<td><button class="mx-auto"><a th:href="@{/carList/{customer_id}(customer_id=${c.customer_id})}"><i class="fa-solid fa-car" id="icon-car"></i></a></button></td>	
+					<td><button class="mx-auto"><a th:href="@{/editCustomer/{customer_id}(customer_id=${c.customer_id})}"><i id="icon-edit"
 									class="fa-regular fa-pen-to-square"></i></a></button></td>
-					<td><button><a th:href="@{/deleteCustomer/{customer_id}(customer_id=${c.customer_id})}"><i id="icon-trash"
+					<td><button class="mx-auto"><a th:href="@{/deleteCustomer/{customer_id}(customer_id=${c.customer_id})}"><i id="icon-trash"
 									class="gg-trash"></i></a></button></td>																							
 				</tr>
 			</tbody>
