--- a/src/main/resources/templates/trafficInsuranceCalculate.html
+++ b/src/main/resources/templates/trafficInsuranceCalculate.html
@@ -35,19 +35,25 @@
 			</div>
 		</div>
 	</nav>
-<!--	End Navbar-->
+	<!--	End Navbar-->
 
 
 	<section id="featured" class="my-5 pt-5">
-		<div class="container-register mt-5 py-5" th:object="${customer}">				
-			<form th:object="${car}" method="post" name="myForm">
-				<h2 th:text = "${customer.firstname}"></h2>
+		<div class="container-register mt-5 py-5" th:object="${customer}">
+			<form th:object="${car}" method="post" name="myForm" action="/result">
+				<h2 th:text="${customer.firstname}"></h2>
 				<h3 class="text-center">Here is the offer price we have prepared for you!</h3>
-				<input type="text" name="offer" placeholder="Offer*" ng-required="true" th:value="${car.offer}">
-				
+
+				<input type="hidden" name="carId" th:value="${car.id}">
+				<h3 th:text="${car.offer + '₺'}"></h3>
+				<div class="button-group">
+					<button type="submit" name="result" value="Accepted" class="btn accept-btn">Accept</button>
+					<button type="submit" name="result" value="Rejected" class="btn reject-btn">Reject</button>
+				</div>
 			</form>
 		</div>
-	</section>  
+	</section>
+
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
