--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,11 +14,12 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
 		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 		crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<script src="https://unpkg.com/@phosphor-icons/web"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 	<link rel="stylesheet" href="" th:href="@{/css/home.css}">
+	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
 
 	<style>
 		.product img {
@@ -79,8 +80,9 @@
 			<div class="product text-center col-lg-3 col-md-4 col-12">
 				<img class="img-fluid mb-3" src="img/traffic.jpg" alt="">
 				<h5 class="p-name">Traffic Insurance</h5>
-				<button class="buy-btn"><a th:href="@{/trafficInsuranceForm(customer_id = ${customer_id})}">Get Offer</a></button>				
-			</div>			
+				<button class="buy-btn"><a th:href="@{/trafficInsuranceForm(customer_id = ${customer_id})}">Get
+						Offer</a></button>
+			</div>
 
 			<div onclick="window.location.href='/form'" class="product text-center col-lg-3 col-md-4 col-12">
 				<img class="img-fluid mb-3" src="img/auto.jpg" alt="">
@@ -102,6 +104,59 @@
 			</div>
 		</div>
 	</section>
+
+	<!-- Footer -->
+	<footer class="mt-4 py-4">
+		<div class="row container mx-auto pt-4">
+			<div class="footer-one col-lg-3 col-md-5 col-12">
+				<img src="img/logo.png" alt="">
+				<p class="pt-3">Protect your future with reliable insurance coverage from our trusted insurance
+					company..</p>
+			</div>
+			<div class="footer-one col-lg-3 col-md-6 col-12 mb-3">
+				<h5 class="pb-2">Featured</h5>
+				<ul class="text-uppercase list-unstyled">
+					<li><a href="#">Traffic Insurance</a></li>
+					<li><a href="#">Comprehensive Insurance</a></li>
+					<li><a href="#">Health Insurance</a></li>
+					<li><a href="#">Earthquake Insurance</a></li>
+				</ul>
+			</div>
+			<div class="footer-one col-lg-3 col-md-6 col-12 mb-3">
+				<h5 class="pb-2">Contact Us</h5>
+				<div>
+					<h6 class="text-uppercase">Address</h6>
+					<p>Istanbul, Turkey</p>
+				</div>
+				<div>
+					<h6 class="text-uppercase">Github</h6>
+					<p>https://github.com/edamuutlu</p>
+				</div>
+				<div>
+					<h6 class="text-uppercase">Email</h6>
+					<p>edamuutlu@gmail.com</p>
+				</div>
+			</div>
+			<div class="footer-one col-lg-3 col-md-6 col-12">
+				<div class="col-lg-4 col-md-6 col-12 mb-3">
+					<h5 class="pb-2">Follow Us</h5>
+					<a href="#"><i class="fa-brands fa-lg fa-facebook"></i></a>
+					<a href="#"><i class="fa-brands fa-lg fa-instagram"></i></a>
+					<a href="#"><i class="fa-brands fa-lg fa-twitter"></i></a>
+				</div>
+				<div class="col-lg-3 col-md-6 col-12 mb-4">
+					<img src="img/payment.png" alt="">
+				</div>
+			</div>
+			<div class="copyright mt-2">
+				<div class="row container mx-auto">
+					<div class="col-lg-4 col-md-6 col-12 text-nowrap mb-2">
+						<p>Eda Nur Mutlu eInsurance © 2023. All Rights Reserved</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
