--- a/src/main/resources/templates/trafficInsuranceCalculate.html
+++ b/src/main/resources/templates/trafficInsuranceCalculate.html
@@ -38,21 +38,68 @@
 	<!--	End Navbar-->
 
 
-	<section id="featured" class="my-5 pt-5">
-		<div class="container-register mt-5 py-5" th:object="${customer}">
-			<form th:object="${car}" method="post" name="myForm" action="/result">
-				<h2 th:text="${customer.firstname}"></h2>
-				<h3 class="text-center">Here is the offer price we have prepared for you!</h3>
+	<!--	<section id="featured" class="my-5 pt-5">-->
+	<!--		<div class="container-register mt-5 py-5" th:object="${customer}">-->
+	<!--			<form th:object="${car}" method="post" name="myForm" action="/result">-->
+	<!--				<h2 th:text="${customer.firstname}"></h2>-->
+	<!--				<h3 class="text-center">Here is the offer price we have prepared for you!</h3>-->
 
-				<input type="hidden" name="carId" th:value="${car.id}">
-				<h3 th:text="${car.offer + '₺'}"></h3>
-				<div class="button-group">
-					<button type="submit" name="result" value="Accepted" class="btn accept-btn">Accept</button>
-					<button type="submit" name="result" value="Rejected" class="btn reject-btn">Reject</button>
+	<!--				<input type="hidden" name="carId" th:value="${car.id}">-->
+	<!--				<h3 th:text="${car.offer + '₺'}"></h3>-->
+	<!--				<div class="button-group">-->
+	<!--					<button type="submit" name="result" value="Accepted" class="btn accept-btn">Accept</button>-->
+	<!--					<button type="submit" name="result" value="Rejected" class="btn reject-btn">Reject</button>-->
+	<!--				</div>-->
+	<!--			</form>-->
+	<!--		</div>-->
+	<!--	</section>-->
+
+	<div class="section-header mt-5">
+		<div class="container">
+			<div class="row">
+
+				<div class="col-lg-12">
+					<h1 class="page-header text-center" th:text="${'Hi ' + customer.firstname + ', '}"></h1>
+					<h3 class="text-center">Here is the offer price we have prepared for you!</h3>
 				</div>
-			</form>
+
+			</div>
+		</div> <!-- /.container -->
+	</div> <!-- /.section-colored -->
+
+
+	<div class="row pricing-table">
+		<div class="col-sm-3 mx-auto" th:object="${customer}">
+			<div class="panel panel-default text-center">
+
+				<div class="panel-heading">
+					<strong>Traffic Insurance</strong>
+				</div>
+				<div class="panel-body">
+					<h3 class="panel-title price" th:text="${car.offer + '₺'}"></h3>
+				</div>
+				<form th:object="${car}" method="post" name="myForm" action="/result">
+					<input type="hidden" name="carId" th:value="${car.id}">
+					<ul class="list-group">
+						<li class="list-group-item">Most Comprehensive Offer</li>
+						<li class="list-group-item">All Authorized Services and Special Services</li>
+						<li class="list-group-item">Original Glass (Exempt)</li>
+						<li class="list-group-item">Mini-Repair: Yes</li>
+						<li class="list-group-item">Roadside Assistance: Yes</li>
+						<li class="list-group-item">
+							<div class="button-group">
+								<button type="submit" name="result" value="Rejected"
+									class="btn reject-btn">Reject</button>
+								<button type="submit" name="result" value="Accepted"
+									class="btn accept-btn">Accept</button>
+							</div>
+						</li>
+					</ul>
+				</form>
+			</div>
 		</div>
-	</section>
+	</div>
+
 
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
