--- a/src/main/resources/templates/trafficInsuranceForm.html
+++ b/src/main/resources/templates/trafficInsuranceForm.html
@@ -45,68 +45,123 @@
 				<p ng-show="msg">{{msg}}</p>
 			</div>
 
-			<form th:action="@{/carRegister}" th:object="${car}" method="post" name="myForm" ng-submit="register()">
+						<form th:action="@{/carRegister}" th:object="${car}" method="post" name="myForm" ng-submit="register()">
 
-				<input type="hidden" name="customer_id" th:value="${customer_id}" />
-				<div style=" display: flex; flex-direction: row;">
-					<h4 class="mr-2">Customer Id : </h4>
-					<h4 th:text="${customer_id}">idParam</h4>
-				</div>
+							<input type="hidden" name="customer_id" th:value="${customer_id}" />
+							<div style=" display: flex; flex-direction: row;">
+								<h4 class="mr-2">Customer Id : </h4>
+								<h4 th:text="${customer_id}">idParam</h4>
+							</div>
 
-				<div class="d-flex justify-content-between mt-3">
-					<label>Enter your licence plate number: </label>
-					<div>
-						<input type="number" name="license_plate1" ng-model="license_plate1" ng-required="true"
-							onKeyPress="if(this.value.length==2) return false;">
-						<p class="error" ng-show="myForm.license_plate1.$invalid && myForm.license_plate1.$touched">
-							Invalid input.</p>
-					</div>
-					<div>
-						<input type="text" name="license_plate2" ng-model="license_plate2" ng-required="true"
-							ng-pattern="/^[a-zA-Z]*$/" minlength="1" maxlength="3">
-						<p class="error" ng-show="myForm.license_plate2.$invalid && myForm.license_plate2.$touched">
-							Invalid input.</p>
-					</div>
-					<div>
-						<input type="number" name="license_plate3" ng-model="license_plate3" ng-required="true"
-							onKeyPress="if(this.value.length==4) return false;">
-						<p class="error" ng-show="myForm.license_plate3.$invalid && myForm.license_plate3.$touched">
-							Invalid input.</p>
-					</div>
-				</div>
+							<div class="d-flex justify-content-between mt-3">
+								<label>Enter your licence plate number: </label>
+								<div>
+									<input type="number" name="license_plate1" ng-model="license_plate1" ng-required="true"
+										onKeyPress="if(this.value.length==2) return false;">
+									<p class="error" ng-show="myForm.license_plate1.$invalid && myForm.license_plate1.$touched">
+										Invalid input.</p>
+								</div>
+								<div>
+									<input type="text" name="license_plate2" ng-model="license_plate2" ng-required="true"
+										ng-pattern="/^[a-zA-Z]*$/" minlength="1" maxlength="3">
+									<p class="error" ng-show="myForm.license_plate2.$invalid && myForm.license_plate2.$touched">
+										Invalid input.</p>
+								</div>
+								<div>
+									<input type="number" name="license_plate3" ng-model="license_plate3" ng-required="true"
+										onKeyPress="if(this.value.length==4) return false;">
+									<p class="error" ng-show="myForm.license_plate3.$invalid && myForm.license_plate3.$touched">
+										Invalid input.</p>
+								</div>
+							</div>
 
-				<select name="type" ng-model="type" ng-required="true">
-					<option value="">Select Usage Type*</option>
-					<option ng-repeat="option in types" value="{{option}}">{{option}}</option>
-				</select>
-				
-				<select name="purpose" ng-model="purpose" ng-required="true">
-					<option value="">Select Purpose of Usage*</option>
-					<option ng-repeat="option in purposes" value="{{option}}">{{option}}</option>
-				</select>
-				
-				<select name="brand" ng-model="brand" ng-required="true">
-					<option value="">Select Brand*</option>
-					<option ng-repeat="option in brands" value="{{option}}">{{option}}</option>
-				</select>
-				
-				<select name="fuel_type" ng-model="fuel_type" ng-required="true">
-					<option value="">Select Fuel Type*</option>
-					<option ng-repeat="option in fuelTypes" value="{{option}}">{{option}}</option>
-				</select>
+							<select name="type" ng-model="type" ng-required="true">
+								<option value="">Select Usage Type*</option>
+								<option ng-repeat="option in types" value="{{option}}">{{option}}</option>
+							</select>
 
-				<input type="number" name="engine_size" placeholder="Engine Size*" ng-model="engine_size"
-					ng-required="true">
-				<p class="error" ng-show="myForm.engine_size.$invalid && myForm.engine_size.$touched">Fill out your
-					engine size.</p>
+							<select name="purpose" ng-model="purpose" ng-required="true">
+								<option value="">Select Purpose of Usage*</option>
+								<option ng-repeat="option in purposes" value="{{option}}">{{option}}</option>
+							</select>
 
-				<input type="number" name="seat_capacity" placeholder="Seating Capacity*" ng-model="seat_capacity"
-					ng-required="true" minlength="1">
-				<p class="error" ng-show="myForm.seat_capacity.$invalid && myForm.seat_capacity.$touched">Fill out your
-					seating capacity.</p>
+							<select name="brand" ng-model="brand" ng-required="true">
+								<option value="">Select Brand*</option>
+								<option ng-repeat="option in brands" value="{{option}}">{{option}}</option>
+							</select>
 
-				<button type="submit" class="btn" ng-disabled="myForm.$invalid">Submit</button>
-			</form>
+							<select name="fuel_type" ng-model="fuel_type" ng-required="true">
+								<option value="">Select Fuel Type*</option>
+								<option ng-repeat="option in fuelTypes" value="{{option}}">{{option}}</option>
+							</select>
+
+							<input type="number" name="engine_size" placeholder="Engine Size*" ng-model="engine_size"
+								ng-required="true">
+							<p class="error" ng-show="myForm.engine_size.$invalid && myForm.engine_size.$touched">Fill out your
+								engine size.</p>
+
+							<input type="number" name="seat_capacity" placeholder="Seating Capacity*" ng-model="seat_capacity"
+								ng-required="true" minlength="1">
+							<p class="error" ng-show="myForm.seat_capacity.$invalid && myForm.seat_capacity.$touched">Fill out your
+								seating capacity.</p>
+
+							<button type="submit" class="btn" ng-disabled="myForm.$invalid">Submit</button>
+						</form>
+
+<!--			<form th:action="@{/carRegister}" th:object="${car}" method="post">-->
+
+<!--				<input type="hidden" name="customer_id" th:value="${customer_id}" />-->
+<!--				<div style=" display: flex; flex-direction: row;">-->
+<!--					<h4 class="mr-2">Customer Id : </h4>-->
+<!--					<h4 th:text="${customer_id}">idParam</h4>-->
+<!--				</div>-->
+
+<!--				<div class="d-flex justify-content-between mt-3">-->
+<!--					<label>Enter your licence plate number: </label>-->
+<!--					<div>-->
+<!--						<input type="number" id="license_plate1" th:field="*{license_plate1}">-->
+<!--						<p th:if="${#fields.hasErrors('license_plate1')}" th:errorclass="error" th:errors="*{license_plate1}" />							-->
+<!--					</div>-->
+<!--					<div>-->
+<!--						<input type="text" id="license_plate2" th:field="*{license_plate2}"-->
+<!--							ng-pattern="/^[a-zA-Z]*$/" minlength="1" maxlength="3">-->
+<!--						<p th:if="${#fields.hasErrors('license_plate2')}" th:errorclass="error" th:errors="*{license_plate2}" />-->
+<!--					</div>-->
+<!--					<div>-->
+<!--						<input type="number" id="license_plate3" th:field="*{license_plate3}"-->
+<!--							onKeyPress="if(this.value.length==4) return false;">-->
+<!--						<p th:if="${#fields.hasErrors('license_plate3')}" th:errorclass="error" th:errors="*{license_plate3}" />-->
+<!--					</div>-->
+<!--				</div>-->
+
+<!--				<select id="type" ng-model="type">-->
+<!--					<option value="">Select Usage Type*</option>-->
+<!--					<option ng-repeat="option in types" value="{{option}}">{{option}}</option>-->
+<!--				</select>-->
+
+<!--				<select id="purpose" ng-model="purpose">-->
+<!--					<option value="">Select Purpose of Usage*</option>-->
+<!--					<option ng-repeat="option in purposes" value="{{option}}">{{option}}</option>-->
+<!--				</select>-->
+
+<!--				<select id="brand" ng-model="brand">-->
+<!--					<option value="">Select Brand*</option>-->
+<!--					<option ng-repeat="option in brands" value="{{option}}">{{option}}</option>-->
+<!--				</select>-->
+
+<!--				<select id="fuel_type" ng-model="fuel_type">-->
+<!--					<option value="">Select Fuel Type*</option>-->
+<!--					<option ng-repeat="option in fuelTypes" value="{{option}}">{{option}}</option>-->
+<!--				</select>-->
+
+<!--				<input type="number" id="engine_size" placeholder="Engine Size*" th:field="*{engine_size}">-->
+<!--				<p th:if="${#fields.hasErrors('engine_size')}" th:errorclass="error" th:errors="*{engine_size}" />-->
+
+<!--				<input type="number" id="seat_capacity" placeholder="Seating Capacity*" th:field="*{seat_capacity}" minlength="1">-->
+<!--				<p th:if="${#fields.hasErrors('seat_capacity')}" th:errorclass="error" th:errors="*{seat_capacity}" />-->
+
+<!--				<button type="submit" class="btn">Submit</button>-->
+<!--			</form>-->
 
 		</div>
 	</section>
