--- a/src/main/resources/templates/trafficInsuranceCalculate.html
+++ b/src/main/resources/templates/trafficInsuranceCalculate.html
@@ -88,8 +88,8 @@
 						<li class="list-group-item">Roadside Assistance: Yes</li>
 						<li class="list-group-item">
 							<div class="button-group">
-								<button type="submit" name="result" value="Rejected"
-									class="btn reject-btn">Reject</button>
+								<button type="submit" name="result" value="Canceled"
+									class="btn reject-btn">Cancel</button>
 								<button type="submit" name="result" value="Accepted"
 									class="btn accept-btn">Accept</button>
 							</div>
